--- a/challenge/backend/package.json
+++ b/challenge/backend/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 4001"
+    "db": "json-server --watch db/db.json --port 4001",
+    "server": "node server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.1",
-    "npm": "^6.14.3"
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "json-server": "^0.16.1"
   }
 }
