--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "db": "json-server --watch db/db.json --port 4001",
-    "server": "node server/server.js"
+    "server": "node server.js",
+    "start": "node server.js && json-server --watch db/db.json --port 4001"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,11 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json-server": "^0.16.1"
+  },
+  "engines": {
+    "node": "13.10.1"
   }
 }
